--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --default-font-size: 1.6rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media only screen and (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
+}
+
+body {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.section {
+  padding: 5rem 3rem;
+}
+
+.row {
+  max-width: 1000px;
+  width: 100%;
+  padding-left: auto;
+  padding-right: auto;
+  margin: 0 auto 0 auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+input[type="text"],
+textarea {
+  border-radius: 1px;
+  border: 0.4px solid rgb(56, 49, 49);
+}
+
+.row::before,
+.row::after {
+  display: table;
+  content: "";
+}
+
+.row::after {
+  clear: both;
+}
+
+
+ /* Styling for card section */
+.cards {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 57.25em) {
+  .card {
+    flex-grow: 1;
+    width: 33%;
+    display: inherit;
+    justify-content: initial;
+  }
+}
+@media only screen and (max-width: 31.06em) {
+  .card {
+    width: 50%;
+  }
+}
+
+.card__img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card__text {
+  padding: 1em 0;
+  font-size: var(--default-font-size);
+}
+
+.card__item {
+  margin: 0 auto;
+  min-width: fit-content;
+  padding: 0.4em;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 3px;
+  border: rgb(179, 168, 168) solid 0.1em;
+}
+@media only screen and (max-width: 57.25em) {
+  .card__item {
+    margin: 0 auto 1em auto;
+  }
+}
+
+.card__email:link,
+.card__email:visited {
+  font-weight: 400;
+  color: inherit;
+  text-decoration: none;
+  display: block;
+  transition: all 0.3s;
+  font-size: 1.2em;
 }
